--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,12 @@
     "@types/node": "^20.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
-    "less": "^4.1.3",
+    "less": "^3.11.1",
     "typescript": "^4.9.5",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
-    "vite-plugin-style-import": "^1.4.1",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^0.40.13"
   }
 }
