--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -30,7 +30,7 @@ jobs:
           version: v1.53
 
           # Optional: working directory, useful for monorepos
-          # working-directory: somedir
+          working-directory: backend
 
           # Optional: golangci-lint command line arguments.
           #
