--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "element-plus": "^2.3.6",
     "highlight.js": "^11.8.0",
     "marked": "^5.1.0",
+    "marked-highlight": "^2.0.1",
+    "pygmentize-bundled": "^2.3.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.0",
     "vuex": "^4.1.0"
