--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "less": "^3.11.1",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-element-plus": "^0.7.2",
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
     "vite-plugin-style-import": "^2.0.0",
